Přidání služby Logger pro centralizované logování v backendu a frontendu. Úprava komponent pro použití loggeru při nákupu lístků a načítání událostí. Vytvoření testů pro nové funkce a úprava konfiguračních souborů pro přidání závislosti na knihovnu winston.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,5 +4,6 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+RUN mkdir -p logs
 EXPOSE 3001
 CMD ["sh", "-c", "npm run seed && npm start"]
